--- a/src/ui/logistics/add_logistics.fxml
+++ b/src/ui/logistics/add_logistics.fxml
@@ -27,17 +27,17 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <TextField layoutX="336.0" layoutY="241.0" prefHeight="31.0" prefWidth="202.0" promptText="Tracking Number">
+      <TextField fx:id="trackingNumber" layoutX="336.0" layoutY="241.0" prefHeight="31.0" prefWidth="202.0" promptText="Tracking Number">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="65.0" layoutY="186.0" prefHeight="31.0" prefWidth="473.0" promptText="Customer Address">
+      <TextField fx:id="customerAddress" layoutX="65.0" layoutY="186.0" prefHeight="31.0" prefWidth="473.0" promptText="Customer Address">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <ComboBox layoutX="67.0" layoutY="243.0" prefHeight="27.0" prefWidth="202.0" promptText="Logistics Provider" />
-      <ComboBox layoutX="63.0" layoutY="131.0" prefHeight="27.0" prefWidth="473.0" promptText="Bill" />
+      <ComboBox fx:id="logisticsProvider" layoutX="67.0" layoutY="243.0" prefHeight="27.0" prefWidth="202.0" promptText="Logistics Provider" />
+      <ComboBox fx:id="bill" layoutX="63.0" layoutY="131.0" prefHeight="27.0" prefWidth="473.0" promptText="Bill" />
    </children>
 </Pane>
