--- a/src/ui/sales/add_sales.fxml
+++ b/src/ui/sales/add_sales.fxml
@@ -17,7 +17,7 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField fx:id="staffID" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Staff ID">
+      <TextField fx:id="staffID" editable="false" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Staff ID">
          <font>
             <Font size="15.0" />
          </font>
